--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "postcss-rtlcss": "^3.6.2",
     "quasar": "^2.6.0",
+    "swiper": "^8.1.1",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
